FilterBy and Excel validations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-spring.datasource.url=jdbc:mySql://localhost:3306/fda
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/fdapn
+spring.datasource.username=postgres
+spring.datasource.password=fdapn
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#hibernate configuration
+# Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show.sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-
-
-
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 
