hitting to s3 bucket to save files of cbp down

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,16 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.servlet.multipart.max-file-size=10MB
 partitionSize=10
 
+# AWS S3 Configuration
+aws.accessKey= AKIAYO3U3YNQYBNBFCUP
+aws.secretKey= 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
+aws.region= ap-south-1
+aws.bucketName= fdapn-submit-cbp-down-records
 
+# Logging Configuration
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+
+# Enable Multipart File Upload
+spring.servlet.multipart.enabled=true
 
