added Interceptor prehandler will do authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ logging.level.com.amazonaws.util.EC2MetadataUtils=error
 # Enable Multipart File Upload
 spring.servlet.multipart.enabled=true
 
+api.gateway.base.url=http://localhost:8081/api/v1/auth/validate
