added excel creation and sending mails for validation errors,added batch insertion and exception handling,refactored methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
 
+# Partition
 partitionSize=1000
 
 # AWS S3 Configuration
@@ -26,4 +27,16 @@ logging.level.com.amazonaws.util.EC2MetadataUtils=error
 # Enable Multipart File Upload
 spring.servlet.multipart.enabled=true
 
+#Cache
+logging.level.org.springframework.cache=DEBUG
 api.gateway.base.url=http://localhost:8081/api/v1/auth/validate
+#mailsender config
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=info@seabed2crest.com
+spring.mail.password=jyrp zuhm kxga rurn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
