integrated FDA Rest endpoints for Product Code Builder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,27 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
+#FDA-Product Code Builder
+api.key=${api.key}
+api.user=${api.user}
+api.base-url=https://www.accessdata.fda.gov/rest/pcbapi/v1
+api.industry-endpoint=/industry?signature=
+api.industryId-endpoint=/industry/{industryid}
+api.subclass-endpoint=/subclass
+api.subclassId-endpoint=/subclass/{subclassid}
+api.industrySubclassId-endpoint=/industrysubclass/{industryid}
+api.class-endpoint=/class
+api.classId-endpoint=/class/{classid}
+api.industryClass-endpoint=/industryclass/{industryid}
+api.pic-endpoint=/pic
+api.picId-endpoint=/pic/{picid}
+api.industrypic-endpoint=/industrypic/{industryid}
+api.product-endpoint=/product
+api.productId-endpoint=/product/{productId}
+api.productName-endpoint=/product/name/{name}
+api.productName-formdata-endpoint=/product/name
+api.industryProduct-endpoint=/industryproduct/{industryid}
+api.productCode-endpoint=/productcode/{code}
+api.productCodeByIndustry-endpoint=/productcodeindustry/{industryid}
+api.partialCode-endpoint=/partialcode
+
