--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,41 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<!-- Exclude the method from code coverage -->
+						<exclude>/FdapnApplication.class</exclude>
+						<exclude>/service/AuditService.class</exclude>
+						<exclude>/service/AuthenticationService.class</exclude>
+						<exclude>/service/FDADataService.class</exclude>
+						<exclude>**/config/**</exclude>
+						<exclude>**/dto/**</exclude>
+						<exclude>**/initializers/**</exclude>
+						<exclude>**/exception/**</exclude>
+						<exclude>**/utils/**</exclude>
+						<exclude>**/scheduler/**</exclude>
+					</excludes>
+				</configuration>
+				</plugin>
 		</plugins>
 	</build>
 
