added dependencies for the restTemplate config

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,16 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.core5</groupId>
+			<artifactId>httpcore5</artifactId>
+			<version>5.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
