--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>fda prior notice</description>
 	<properties>
 		<java.version>17</java.version>
+		<jar.path>D:/customJAR/jsonConverter-0.0.1-SNAPSHOT.jar</jar.path>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -107,6 +108,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 			<version>3.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.converter</groupId>
+			<artifactId>jsonConverter</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${jar.path}</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
